Add FM modulator with example

--- a/wbfm/Makefile
+++ b/wbfm/Makefile
@@ -1,12 +1,25 @@
+CXX=g++
+CXXFLAGS += -std=c++14
+LIBS = -lm
+
+ifdef DEBUG
+	CXXFLAGS += -g -O0
+else
+	CXXFLAGS += -flto -Ofast -mavx2 -DNDEBUG
+endif
+
 default: all
 
-all: perf demod
+all: perf demod mod
 
 perf: perf.cpp filter.hpp
-	g++ -std=c++14 -flto -Ofast -mavx2 -o perf perf.cpp -lm
+	$(CXX) $(CXXFLAGS) -o perf perf.cpp $(LIBS)
 
-demod: demod.cpp
-	g++ -std=c++14 -flto -Ofast -mavx2 -o demod demod.cpp -lm
+demod: demod.cpp filter.hpp
+	$(CXX) $(CXXFLAGS) -o demod demod.cpp $(LIBS)
+
+mod: mod.cpp filter.hpp
+	$(CXX) $(CXXFLAGS) -o mod mod.cpp $(LIBS)
 
 clean:
-	rm -f perf demod
+	rm -f perf demod mod
